[package]
name = "winit_gameloop"
version = "0.1.0"
authors = ["Philippe <Philippe@DESKTOP-IIU0C7D>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit     = "0.20.0"
#winit     = { path = "../winit", version = "0.20.0" }

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3.6"
features = [
    "timeapi",
]