[package]
name = "winit_gameloop"
version = "0.1.0"
authors = ["Philippe Renon<philippe_renon@yahoo.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26"
#winit = { path = "../winit" }

backtrace = "0.3"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3.9"
#features = [
#    "timeapi",
#]

[dev-dependencies]
ash = "0.37"
#ash = { path = "../ash/ash" }

num = "0.2"
cgmath = "0.17"
image = "0.23"
memoffset = "0.5"
tobj = "0.1"
#fps_clock = "2.0"
